# smart-photo-sharing-backend

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.yml  pipeline_output.txt  pipeline_test_results.json  pyproject.toml  pytest.ini  test_faiss_index.ipynb  testing.py
.github/workflows/: cd-production.yml  ci.yml
alembic/versions/: add_face_clusters.py
docs/: CACHE_EXAMPLES.md  CACHE_HANDLING.md  CLUSTERING_AUTOLABEL_API.md  FACE_QUALITY_API.md  FACE_QUALITY_API_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md
docs/architecture/: overview.md
docs/guides/: getting_started.md  local_development.md
infra/docker/: api.Dockerfile  worker.Dockerfile
infra/k8s/base/: api-deployment.yaml  configmap.yaml  kustomization.yaml  worker-deployment.yaml
infra/terraform/environments/dev/: main.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/rds/: main.tf  variables.tf
infra/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/vpc/: main.tf  variables.tf
scripts/: convert_to_tensorrt.py  download_models.py  seed_plans.py
scripts/dev/: check_models.py  check_models_verbose.py  debug_face_import.py  debug_face_output.txt  debug_import_face.py  print_models_path.py  seed_data.py  setup_local.sh  show_database_overview..ps1  verify_setup.sh
src/api/: deps.py
src/api/v1/: router.py
src/api/v1/endpoints/: admin.py  albums.py  auth.py  device_tokens.py  (+7 more)
src/app/: config.py  dependencies.py  exceptions.py  logging_config.py  main.py  middleware.py
src/core/: __init__.py  audit_log.py  cache.py  cache_middleware.py  cache_utils.py  rate_limiter.py  security.py
src/db/: base.py
src/db/migrations/: env.py
src/models/: __init__.py  album.py  audit_log.py  base.py  device_token.py  download.py  enums.py  face.py  face_cluster.py  face_person.py  login_history.py  notification.py  otp.py  payment.py  person.py  photo.py  plan.py  refresh_token.py  search_history.py  storage_usage.py  subscription.py  user.py  webhook_event.py
src/repositories/: album_repo.py  base.py  person_repo.py  photo_repo.py
src/schemas/: __init__.py  admin.py  album.py  auth.py  face.py  job.py  notification.py  payment.py  person.py  photo.py  search.py  upload.py
src/services/: __init__.py  webhooks.py
src/services/face/: aligner.py  clusturing.py  detector.py  embedding.py  pipeline.py  search.py
src/services/image/: __init__.py  watermark.py
src/services/messaging/: __init__.py  fcm_service.py  notification_service.py  otp_service.py
src/services/payments/: razorpay_service.py
src/services/storage/: s3.py
src/tasks/: celery_app.py
src/tasks/workers/: face_processor.py  person_worker.py  search_worker.py
src/utils/: validators.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/api/: test_admin.py  test_auth.py  test_face_api.py  test_payments.py
tests/unit/: test_local_cpu.py  test_local_images.py  test_models.py  testing_pipeline.py
(+26 files in other folders)
